Added the blog blog details and shortcodes

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -129,9 +129,9 @@
                 <li><a href="#work">Our Work</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="blog.html" class="external">Blog</a></li>
+                <li><a href="@routes.Application.blog" class="external">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="shortcodes.html" class="external">Shortcodes</a></li>
+                <li><a href="@routes.Application.shortcodes" class="external">Shortcodes</a></li>
             </ul>
         </nav>
 
