Removing the hash from the home

--- a/app/views/blog.scala.html
+++ b/app/views/blog.scala.html
@@ -50,7 +50,7 @@
 
         <nav id="menu">
             <ul id="menu-nav">
-                <li><a href="@routes.Application.index#home-slider" class="external">Home</a></li>
+                <li><a href="@routes.Application.index" class="external">Home</a></li>
                 <li><a href="@routes.Application.index#work" class="external">Our Work</a></li>
                 <li><a href="@routes.Application.index#about" class="external">About Us</a></li>
                 <li><a href="@routes.Application.index#services" class="external">Services</a></li>
